tests/toy/neg/001464_mutation.toylang
program a = { var a : sleep int; } .
